RESOLVED FIXED267537
REGRESSION(272806@main): [Debug][GStreamer] ASSERTION FAILED: The string being removed is an atom in the string table of an other thread! in ~_WebKitVideoEncoderPrivate()
https://bugs.webkit.org/show_bug.cgi?id=267537
Summary REGRESSION(272806@main): [Debug][GStreamer] ASSERTION FAILED: The string bein...
Vitaly Dyackhov
Reported 2024-01-15 05:03:37 PST
Crashing tests: imported/w3c/web-platform-tests/webcodecs/video-encoder-h264.https.any.html?baseline imported/w3c/web-platform-tests/webcodecs/video-encoder-h264.https.any.worker.html?high imported/w3c/web-platform-tests/webcodecs/video-encoder.https.any.html imported/w3c/web-platform-tests/webcodecs/videoFrame-drawImage.any.html Stack trace: #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:333 #1 0x00007fb801a0aa3d in WTF::AtomStringImpl::remove(WTF::AtomStringImpl*) (string=0x7fb7e1557bc0) at /app/webkit/Source/WTF/wtf/text/AtomStringImpl.cpp:479 #2 0x00007fb801a19da6 in WTF::StringImpl::~StringImpl() (this=0x7fb7e1557bc0, __in_chrg=<optimized out>) at /app/webkit/Source/WTF/wtf/text/StringImpl.cpp:124 #3 0x00007fb801a19f94 in WTF::StringImpl::destroy(WTF::StringImpl*) (stringImpl=0x7fb7e1557bc0) at /app/webkit/Source/WTF/wtf/text/StringImpl.cpp:155 #4 0x00007fb7fdaf5b6a in WTF::StringImpl::deref() (this=0x7fb7e1557bc0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/text/StringImpl.h:1158 #5 0x00007fb7fdaf7a53 in WTF::DefaultRefDerefTraits<WTF::StringImpl>::derefIfNotNull(WTF::StringImpl*) (ptr=0x7fb7e1557bc0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/RefPtr.h:43 #6 0x00007fb7fdaf6698 in WTF::RefPtr<WTF::StringImpl, WTF::RawPtrTraits<WTF::StringImpl>, WTF::DefaultRefDerefTraits<WTF::StringImpl> >::~RefPtr() (this=0x7fb530010c88, __in_chrg=<optimized out>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/RefPtr.h:75 #7 0x00007fb7fdaf5b90 in WTF::String::~String() (this=0x7fb530010c88, __in_chrg=<optimized out>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/text/WTFString.h:89 #8 0x00007fb8062b1bd2 in _WebKitVideoEncoderPrivate::~_WebKitVideoEncoderPrivate() (this=0x7fb530010c30, __in_chrg=<optimized out>) at /app/webkit/Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:195 #9 0x00007fb80629cdc1 in webkit_video_encoder_finalize(GObject*) (object=0x7fb530010cb0) at /app/webkit/Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:212 #10 0x00007fb7f19d91ff in g_object_unref (_object=0x7fb530010cb0) at ../gobject/gobject.c:3938 #11 g_object_unref (_object=0x7fb530010cb0) at ../gobject/gobject.c:3802 #12 0x00007fb806189a4c in WTF::derefGPtr<_GstElement>(_GstElement*) (ptr=0x7fb530010cb0 [GstElement|webkitvideoencoder21]) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp:98 #13 0x00007fb803d0a86e in WTF::GRefPtr<_GstElement>::~GRefPtr() (this=0x7fb7e1656a08, __in_chrg=<optimized out>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/glib/GRefPtr.h:82 #14 0x00007fb8062bcf87 in WebCore::GStreamerElementHarness::~GStreamerElementHarness() (this=0x7fb7e1656a00, __in_chrg=<optimized out>) at /app/webkit/Source/WebCore/platform/gstreamer/GStreamerElementHarness.cpp:176 #15 0x00007fb805e68ab9 in WTF::ThreadSafeRefCounted<WebCore::GStreamerElementHarness, (WTF::DestructionThread)0>::deref() const::{lambda()#1}::operator()() const (__closure=0x7ffd4868fb00) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/ThreadSafeRefCounted.h:115 #16 0x00007fb805e68b0b in WTF::ThreadSafeRefCounted<WebCore::GStreamerElementHarness, (WTF::DestructionThread)0>::deref() const (this=0x7fb7e1656a00) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/ThreadSafeRefCounted.h:127 #17 0x00007fb805e68a22 in WTF::DefaultRefDerefTraits<WebCore::GStreamerElementHarness>::derefIfNotNull(WebCore::GStreamerElementHarness*) (ptr=0x7fb7e1656a00) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/RefPtr.h:43 #18 0x00007fb805e63922 in WTF::RefPtr<WebCore::GStreamerElementHarness, WTF::RawPtrTraits<WebCore::GStreamerElementHarness>, WTF::DefaultRefDerefTraits<WebCore::GStreamerElementHarness> >::~RefPtr() (this=0x7fb7e16f2bc0, __in_chrg=<optimized out>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/RefPtr.h:75 #19 0x00007fb8061dfcdd in WebCore::GStreamerInternalVideoEncoder::~GStreamerInternalVideoEncoder() (this=0x7fb7e16f2b80, __in_chrg=<optimized out>) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:254 #20 0x00007fb806213b36 in WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::GStreamerInternalVideoEncoder, (WTF::DestructionThread)1>() const::{lambda()#1}::operator()() const (__closure=0x7fb7e16eb528) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/ThreadSafeWeakPtr.h:101 #21 0x00007fb80621f81a in WTF::Detail::CallableWrapper<WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::GStreamerInternalVideoEncoder, (WTF::DestructionThread)1>() const::{lambda()#1}, void>::call() (this=0x7fb7e16eb520) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #22 0x00007fb7fe4f494d in WTF::Function<void ()>::operator()() const (this=0x7ffd4868fc80) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #23 0x00007fb801993e2d in WTF::RunLoop::performWork() (this=0x7fb7e10180c0) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:147 #24 0x00007fb801a4e7aa in operator()(gpointer) const (__closure=0x0, userData=0x7fb7e10180c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:80 #25 0x00007fb801a4e7ce in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:82 #26 0x00007fb801a4e73d in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x55db49490280, callback=0x7fb801a4e7b1 <_FUN(gpointer)>, userData=0x7fb7e10180c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #27 0x00007fb801a4e78b in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #28 0x00007fb7f2f16d36 in g_main_dispatch (context=0x55db49490120) at ../glib/gmain.c:3460 #29 g_main_context_dispatch (context=0x55db49490120) at ../glib/gmain.c:4200 #30 0x00007fb7f2f742b8 in g_main_context_iterate.isra.0 (context=0x55db49490120, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4276 #31 0x00007fb7f2f163ff in g_main_loop_run (loop=0x55db49490260) at ../glib/gmain.c:4479 #32 0x00007fb801a4edfe in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #33 0x00007fb7ff4d0683 in WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) (this=0x7ffd4868ff50, argc=4, argv=0x7ffd48690118) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:72 #34 0x00007fb7ff4cd4eb in WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWPE>(int, char**) (argc=4, argv=0x7ffd48690118) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:98 #35 0x00007fb7ff4c96a9 in WebKit::WebProcessMain(int, char**) (argc=4, argv=0x7ffd48690118) at /app/webkit/Source/WebKit/WebProcess/wpe/WebProcessMainWPE.cpp:75 #36 0x000055db477d08e9 in main(int, char**) (argc=4, argv=0x7ffd48690118) at /app/webkit/Source/WebKit/WebProcess/EntryPoint/unix/WebProcessMain.cpp:31
Attachments
Vitaly Dyackhov
Comment 1 2024-01-15 05:07:58 PST
EWS
Comment 2 2024-01-15 11:17:50 PST
Committed 273048@main (fc613d1a9cda): <https://commits.webkit.org/273048@main> Reviewed commits have been landed. Closing PR #22779 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-01-15 11:18:14 PST
Note You need to log in before you can comment on or make changes to this bug.