REGRESSION(272806@main): [Debug][GStreamer] ASSERTION FAILED: The string being removed is an atom in the string table of an other thread! in ~_WebKitVideoEncoderPrivate() https://bugs.webkit.org/show_bug.cgi?id=267537

Reviewed by Philippe Normand.

Making an isolated copy of the passed codec string fixes the issue.

* Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:
(videoEncoderSetEncoder):

Canonical link: https://commits.webkit.org/273048@main